--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <button>Buy Now</button>
     </div>
   </div>
-  <div class="js">
+  <div id="js">
 
   </div>
   <script src="./script.js"></script>
