--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="./bg.jpg" alt="image" id="bg">
+  <!-- <img src="./bg.jpg" alt="image" id="bg"> -->
   <div class="nav">
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
@@ -48,7 +48,6 @@
     </div>
   </div>
   <div id="js">
-
   </div>
   <script src="./script.js"></script>
 </body>
