--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <title>Anmol</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 </head>
-
 <body>
   <!-- <img src="./bg.jpg" alt="image" id="bg"> -->
   <div class="nav">
@@ -31,9 +33,9 @@
       <a href="#" target="_blank">Elements</a>
     </div>
     <div class="icon">
-      <a>&#128269;</a>
-      <a>&#128722;</a>
-      <a>&#9776;</a>
+      <a href="#" target="_blank">&#128269;</a>
+      <a href="#" target="_blank">&#128722;</a>
+      <a href="#" target="_blank">&#9776;</a>
     </div>
   </div>
   <div class="space"></div>
